--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,72 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{tmech2024,
+  abbr={PAPER},
+  title={Implementation of a Long-lasting, Untethered, Lightweight, Upper-Limb Exoskeleton},
+  author={Liu, H. and Fang, K. and Chen, L. and Xu, C. and Chen, C. and Wang, T. and Wu, Z. and Ye, J. and Fu, C. and Chen, G. and Wang, H.},
+  abstract={To prevent muscle fatigue or disorder from long-term or repetitive arm-lifting in manual operations, various exoskeletons have been developed. However, motorized exoskeletons suffer from heavy mass and high cost, while previous passive exoskeletons possess poor adaptability. To solve this problem, we designed a lightweight (3.1 kg) upper limb exoskeleton capable of providing self-adaptable support based on linkage mechanisms and gas springs, with tunable maximum force based on small motors and sensors to adapt to hand loads. The motors adjust the mechanical structure’s dimensions, instead of directly supporting the arms, resulting in low power consumption (1.85 W) and extended operation (11 hours). Experimental results show that the measured surface electromyogram (sEMG) activities reduced up to 43.84% and 46.23% for static and dynamic tests, respectively.},
+  journal={IEEE/ASME Transactions on Mechatronics (TMECH)},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={2024},
+  month={June},
+  publisher=ieee,
+  image={TMECH.png},
+  doi={10.1109/TMECH.2024.3431884},
+  pdf={https://drive.google.com/file/d/1pEHqWgeVyxcW_C0bcH2PYkcqWSTlBtFD/view?usp=sharing},
+  selected={true}
+}
+@article{DynaPix,
+  abbr={PAPER},
+  title={DynaPix SLAM: A Pixel-Based Dynamic Visual SLAM Approach},
+  author={Xu, C. and Bonetto, E. and Ahmad, A.},
+  journal={arXiv preprint},
+  year={2024},
+  month={March},
+  publisher=aps,
+  arxiv={2309.09879},
+  code={https://github.com/robot-perception-group/DynaPix},
+  selected={true}
+}
+@article{TRO2023,
+  abbr={PAPER},
+  title={GRADE: Generating Realistic Animated Dynamic Environments for Robotics Research},
+  author={Bonetto, E. and Xu, C. and Ahmad, A.},
+  abstract={In this work, we present a fully customizable framework for generating realistic animated dynamic environments (GRADE) for robotics research. The data produced can be post-processed, e.g. to add noise, and easily expanded with new information using the tools that we provide. To demonstrate GRADE, we generated an indoor dynamic environment dataset and then compared different SLAM algorithms on the produced sequences. By doing that, we show how current research over-relies on well-known benchmarks and fails to generalize. Furthermore, our tests with YOLO and Mask R-CNN provide evidence that our data can improve training performance and generalize to real sequences. Finally, we show GRADE's flexibility by using it for indoor active SLAM, with diverse environment sources, and in a multi-robot scenario. The code, results, implementation details, and generated data are provided as open-source. },
+  journal={arXiv preprint},
+  year={2023},
+  month={October},
+  publisher=aps,
+  image={grade.png},
+  arxiv={2303.04466},
+  code={https://github.com/robot-perception-group/GRADE_tools/},
+  website={https://grade.is.tue.mpg.de/},
+  selected={true}
+}
+@article{FallingWallsLab,
+  abbr={ TALK },
+  title={Breaking the Wall of Intensive Work Above Head: Design of Passive Upper-Limb Exoskeleton},
+  author={Xu, C.},
+  abstract={Aiming at various types of jobs like automobile which require long-term arm-lifting work and easily cause muscle damage, a passive adjustable arm-exoskeleton is designed based on a spring slider model and four-bar-linkage model.},
+  journal={Falling Walls Lab},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={2019},
+  month={November},
+  publisher=aps,
+  doi={10.1103/PhysRev.47.777},
+  html={https://www.youtube.com/watch?v=olrT6oaLfEA&list=PLkhVBjzvMPh0EPXYHFBxoHLYzbArnXFX1&index=3},
+  pdf={lab19.pdf},
+  image={fallingwalls.jpg},
+  selected={true}
+}
+
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
@@ -57,7 +123,7 @@
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
