update dynapix paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,19 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{DynaPix,
+  abbr={PAPER},
+  title={DynaPix SLAM: A Pixel-Based Dynamic Visual SLAM Approach},
+  author={Xu*, C. and Bonetto*, E. and Ahmad, A.},
+  journal={DAGM German Conference on Pattern Recognition (GCPR)},
+  year={2024},
+  publisher=springer,
+  arxiv={2309.09879},
+  code={https://github.com/robot-perception-group/DynaPix},
+  website={https://dynapix.is.tue.mpg.de/},
+  selected={true}
+}
+
 @article{tmech2024,
   abbr={PAPER},
   title={Implementation of a Long-lasting, Untethered, Lightweight, Upper-Limb Exoskeleton},
@@ -14,25 +27,13 @@
   pages={777--780},
   numpages={0},
   year={2024},
-  month={June},
   publisher=ieee,
   image={TMECH.png},
   doi={10.1109/TMECH.2024.3431884},
-  pdf={https://drive.google.com/file/d/1pEHqWgeVyxcW_C0bcH2PYkcqWSTlBtFD/view?usp=sharing},
+  html={https://ieeexplore.ieee.org/document/10629199},
   selected={true}
 }
-@article{DynaPix,
-  abbr={PAPER},
-  title={DynaPix SLAM: A Pixel-Based Dynamic Visual SLAM Approach},
-  author={Xu, C. and Bonetto, E. and Ahmad, A.},
-  journal={arXiv preprint},
-  year={2024},
-  month={March},
-  publisher=aps,
-  arxiv={2309.09879},
-  code={https://github.com/robot-perception-group/DynaPix},
-  selected={true}
-}
+
 @article{TRO2023,
   abbr={PAPER},
   title={GRADE: Generating Realistic Animated Dynamic Environments for Robotics Research},
