--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,9 +18,9 @@
 
 @article{tmech2024,
   abbr={PAPER},
-  title={Implementation of a Long-lasting, Untethered, Lightweight, Upper-Limb Exoskeleton},
+  title={Implementation of a Long-Lasting, Untethered, Lightweight, Upper Limb Exoskeleton},
   author={Liu, H. and Fang, K. and Chen, L. and Xu, C. and Chen, C. and Wang, T. and Wu, Z. and Ye, J. and Fu, C. and Chen, G. and Wang, H.},
-  abstract={To prevent muscle fatigue or disorder from long-term or repetitive arm-lifting in manual operations, various exoskeletons have been developed. However, motorized exoskeletons suffer from heavy mass and high cost, while previous passive exoskeletons possess poor adaptability. To solve this problem, we designed a lightweight (3.1 kg) upper limb exoskeleton capable of providing self-adaptable support based on linkage mechanisms and gas springs, with tunable maximum force based on small motors and sensors to adapt to hand loads. The motors adjust the mechanical structure’s dimensions, instead of directly supporting the arms, resulting in low power consumption (1.85 W) and extended operation (11 hours). Experimental results show that the measured surface electromyogram (sEMG) activities reduced up to 43.84% and 46.23% for static and dynamic tests, respectively.},
+  abstract={To prevent muscle fatigue or disorder from long-term or repetitive arm-lifting in manual operations, various exoskeletons have been developed. However, motorized exoskeletons suffer from heavy mass and high cost, while previous passive exoskeletons possess poor adaptability. To solve this problem, we designed a lightweight (3.1 kg) upper limb exoskeleton capable of providing self-adaptable support based on linkage mechanisms and gas springs, with tunable maximum force based on small motors and sensors to adapt to hand loads. The motors adjust the dimension of the mechanical structure, instead of directly supporting the arms, resulting in low power consumption (1.85 W) and extended operation (11 hours). Experimental results show that the measured surface electromyogram activities reduced up to 43.84% and 46.23% for static and dynamic tests, respectively.},
   journal={IEEE/ASME Transactions on Mechatronics (TMECH)},
   volume={47},
   issue={10},
