update news & CV

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{ChatGarment,
   abbr={PAPER},
   title={ChatGarment: Garment Estimation, Generation and Editing via Large Language Models},
-  author={Bian, S. and Xu, C. and Xiu, Y. and Grigorev, A. and Liu, Z. and Lu, C. and Black, M. and Feng, Y.},
+  author={Bian, S. and Xu, C. and Xiu, Y. and Grigorev, A. and Liu, Z. and Lu, C. and Black, M. J. and Feng, Y.},
   journal={preprint coming soon},
   abstract={ChatGarment is a novel approach that leverages large vision-language models (VLMs) to automate the estimation, generation, and editing of 3D garment sewing patterns from images or text descriptions. Unlike previous methods that often lack robustness and interactive editing capabilities, ChatGarment finetunes a VLM to produce GarmentCode, a JSON-based, language-friendly format for 2D sewing patterns, enabling both estimating and editing from images and text instructions. To optimize performance, we refine GarmentCode by expanding its support for more diverse garment types and simplifying its structure, making it more efficient for VLM finetuning. Additionally, we develop an automated data construction pipeline to generate a large-scale dataset of image-to-sewing-pattern and text-to-sewing-pattern pairs, empowering ChatGarment with strong generalization across various garment types.},
   year={2024},
@@ -19,7 +19,7 @@
   abbr={PAPER},
   title={Exploiting Semantic Scene Reconstruction for Estimating Building Envelope Characteristics},
   author={Xu, C. and Mielle, M. and Laborde, A. and Waseem, A., and Forest, F. and Fink, O.},
-  journal={arXiv preprint},
+  journal={arXiv preprint (Under Review)},
   abstract={The precise assessment of geometric building envelope characteristics is essential for informed building retrofitting decisions. Previous methods for estimating building characteristics, such as window-to-wall ratio, building footprint area, and the location of architectural elements, have primarily relied on deep-learning-based detection or segmeantion techniques on 2D images. However, these approaches tend to focus on planar facade properties, limiting their accuracy and comprehensiveness when analyzing 3D building envelopes. This work leverages cutting-edge neural surface reconstruction techniques based on SDF representations for 3D building analysis. We propose BuildNet3D, a novel framework to estimate geometric building characteristics from 2D image inputs. By integrating SDF-based representation with semantic modality, BuildNet3D recovers fine-grained 3D geometry and semantics of building envelopes, enabling the automatic extraction of key building characteristics.},
   year={2024},
   image={buildnet.png},
@@ -66,7 +66,7 @@
   title={GRADE: Generating Realistic Animated Dynamic Environments for Robotics Research},
   author={Bonetto, E. and Xu, C. and Ahmad, A.},
   abstract={In this work, we present a fully customizable framework for generating realistic animated dynamic environments (GRADE) for robotics research. The data produced can be post-processed, e.g. to add noise, and easily expanded with new information using the tools that we provide. To demonstrate GRADE, we generated an indoor dynamic environment dataset and then compared different SLAM algorithms on the produced sequences. By doing that, we show how current research over-relies on well-known benchmarks and fails to generalize. Furthermore, our tests with YOLO and Mask R-CNN provide evidence that our data can improve training performance and generalize to real sequences. Finally, we show GRADE's flexibility by using it for indoor active SLAM, with diverse environment sources, and in a multi-robot scenario. The code, results, implementation details, and generated data are provided as open-source. },
-  journal={arXiv preprint},
+  journal={arXiv preprint (Under Review)},
   year={2023},
   month={October},
   publisher=aps,
@@ -76,6 +76,7 @@
   website={https://grade.is.tue.mpg.de/},
   selected={true}
 }
+
 @article{FallingWallsLab,
   abbr={ TALK },
   title={Breaking the Wall of Intensive Work Above Head: Design of Passive Upper-Limb Exoskeleton},
