update profile and position changes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -62,7 +62,7 @@
   selected={true}
 }
 
-@article{TRO2023,
+@article{IJRR2025,
   abbr={PAPER},
   title={GRADE: Generating Realistic Animated Dynamic Environments for Robotics Research},
   author={Bonetto, E. and Xu, C. and Ahmad, A.},
@@ -71,7 +71,7 @@
   year={2023},
   month={October},
   publisher=aps,
-  image={grade.png},
+  image={GRADE.jpg},
   arxiv={2303.04466},
   code={https://github.com/robot-perception-group/GRADE_tools/},
   website={https://grade.is.tue.mpg.de/},
