--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,22 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{IJRR2025,
+  abbr={PAPER},
+  title={GRADE: Generating Realistic and Dynamic Environments for Robotics Research with Isaac Sim},
+  author={Bonetto, E. and Xu, C. and Ahmad, A.},
+  abstract={In this work, we present a fully customizable framework for generating realistic animated dynamic environments (GRADE) for robotics research. The data produced can be post-processed, e.g. to add noise, and easily expanded with new information using the tools that we provide. To demonstrate GRADE, we generated an indoor dynamic environment dataset and then compared different SLAM algorithms on the produced sequences. By doing that, we show how current research over-relies on well-known benchmarks and fails to generalize. Furthermore, our tests with YOLO and Mask R-CNN provide evidence that our data can improve training performance and generalize to real sequences. Finally, we show GRADE's flexibility by using it for indoor active SLAM, with diverse environment sources, and in a multi-robot scenario. The code, results, implementation details, and generated data are provided as open-source. },
+  journal={International Journal of Robotics Research (IJRR)},
+  year={2025},
+  publisher=aps,
+  image={GRADE.jpg},
+  arxiv={2303.04466},
+  code={https://github.com/robot-perception-group/GRADE_tools/},
+  website={https://grade.is.tue.mpg.de/},
+  selected={true}
+}
+
+
 @article{BuildNet3D,
   abbr={PAPER},
   title={Exploiting Semantic Scene Reconstruction for Estimating Building Envelope Characteristics},
@@ -60,22 +76,6 @@
   image={TMECH.png},
   doi={10.1109/TMECH.2024.3431884},
   html={https://ieeexplore.ieee.org/document/10629199},
-  selected={true}
-}
-
-@article{IJRR2025,
-  abbr={PAPER},
-  title={GRADE: Generating Realistic Animated Dynamic Environments for Robotics Research},
-  author={Bonetto, E. and Xu, C. and Ahmad, A.},
-  abstract={In this work, we present a fully customizable framework for generating realistic animated dynamic environments (GRADE) for robotics research. The data produced can be post-processed, e.g. to add noise, and easily expanded with new information using the tools that we provide. To demonstrate GRADE, we generated an indoor dynamic environment dataset and then compared different SLAM algorithms on the produced sequences. By doing that, we show how current research over-relies on well-known benchmarks and fails to generalize. Furthermore, our tests with YOLO and Mask R-CNN provide evidence that our data can improve training performance and generalize to real sequences. Finally, we show GRADE's flexibility by using it for indoor active SLAM, with diverse environment sources, and in a multi-robot scenario. The code, results, implementation details, and generated data are provided as open-source. },
-  journal={arXiv preprint (Under Review)},
-  year={2023},
-  month={October},
-  publisher=aps,
-  image={GRADE.jpg},
-  arxiv={2303.04466},
-  code={https://github.com/robot-perception-group/GRADE_tools/},
-  website={https://grade.is.tue.mpg.de/},
   selected={true}
 }
 
